--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 h1,
 h2 {
-  text-align: center;
   font-family: "Coming Soon";
 }
 
@@ -15,7 +14,20 @@ h2 {
   margin: 0;
   padding: 0;
   color: #f4c865;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+}
+
+h3 {
+  font-family: "Calligraffitti", cursive;
+  color: #b72171;
+  margin-top: 50px;
+  margin-left: 120px;
+}
+
+h4 {
+  margin-top: 50px;
+  font-family: "Amatic SC", cursive;
+  font-size: 33px;
 }
 
 hr {
@@ -24,9 +36,31 @@ hr {
 }
 
 .skyline {
-  width: 450px;
-  display: block;
+  width: 100%;
   margin: 0 auto;
   margin-top: 20px;
   padding: 0;
+}
+
+.introduction {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: "Dosis", sans-serif;
+  font-size: 18px;
+  text-align: justify;
+}
+
+@media (min-width: 600px) {
+  .skyline {
+    width: 450px;
+  }
+}
+
+@media (max-width: 600px) {
+  h4 {
+    font-size: 30px;
+  }
+  .introduction {
+    font-size: 16px;
+  }
 }
