--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ hr {
   background: black;
 }
 
+
 .skyline {
   width: 100%;
   margin: 0 auto;
@@ -50,9 +51,47 @@ hr {
   text-align: justify;
 }
 
+.we-introduction {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: "Dosis", sans-serif;
+  font-size: 18px;
+  text-align: center;
+}
+
+.culture-wrapper {
+  background-color: #f2b1b7;
+  
+  
+}
+
+.cuisine-wrapper {
+  background-color: #f18667;
+  
+ 
+}
+
+.nightlife-wrapper {
+  background-color: #fde560;
+  
+ 
+}
+
+.outdoor-wrapper {
+  background-color: #95c11f;
+
+  
+}
+
+.underline {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
 @media (min-width: 600px) {
   .skyline {
-    width: 450px;
+    width: 470px;
   }
 }
 
@@ -62,5 +101,9 @@ hr {
   }
   .introduction {
     font-size: 16px;
+  }
+  .culture-wrapper, .cuisine-wrapper, .nightlife-wrapper, .outdoor-wrapper {
+    column-count: 3;
+  
   }
 }
