--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,8 @@ h2 {
 }
 
 h3 {
-  font-family: "Calligraffitti", cursive;
-  color: #b72171;
-  margin-top: 50px;
-  margin-left: 120px;
+ font-family: "Amatic SC", cursive;
+  font-size: 33px; 
 }
 
 h4 {
@@ -30,11 +28,29 @@ h4 {
   font-size: 33px;
 }
 
+h5 {
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+h6 {
+  font-size: 18px;
+}
+
 hr {
   height: 1px;
   background: black;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
+ul {
+  margin-bottom: 0px;
+}
+
+li {
+  line-height: 35px
+}
 
 .skyline {
   width: 100%;
@@ -57,6 +73,12 @@ hr {
   font-family: "Dosis", sans-serif;
   font-size: 18px;
   text-align: center;
+}
+
+.section-introduction {
+   font-family: "Dosis", sans-serif;
+  font-size: 18px;
+  text-align: justify;
 }
 
 .culture-wrapper {
@@ -87,6 +109,11 @@ hr {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+.breakfast {
+  width: 1;
+}
+
 
 
 @media (min-width: 600px) {
